--- a/_css/style.css
+++ b/_css/style.css
@@ -239,6 +239,11 @@ table#tabelaspec td.cd{
     background-color: #cecece;
 }
 
+section#corpo iframe{
+    margin-left: 15%;
+    margin-bottom: 10px;
+}
+
 /*   FOOTER   */
 footer#rodape{
     clear: both;
